--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -89,3 +89,51 @@ button {
      text-align: center;
 }
 
+.title{
+    text-align:center;
+}
+
+.list-add-area{
+    width:100%;
+    display:flex;
+    flex-direction:row;
+    text-align:center;
+}
+
+#list-input-area{
+    width:50%;
+    text-align:center;
+
+}
+
+.add-btn{
+    width:27%;
+    text-align: center;
+    padding: .5rem;
+    cursor: pointer;
+    background-color: #999999;
+    color: white;
+}
+
+.lists{
+  list-style: circle;
+  width: 50%;
+  height:100px;
+  margin-top: 1.5rem;
+  border:1px solid black;
+  margin:10px;
+  padding:10px;
+
+}
+
+.update-btn{
+ 　　width:27%;
+    text-align: center;
+    padding: .5rem;
+    cursor: pointer;
+    background-color: #999999;
+    color: white;
+}
+.destroy-btn{
+
+}
