--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -122,7 +122,8 @@ button {
 }
 
 #list-input-area{
-    width:50%;
+
+    width:70%;
     text-align:center;
 
 }
@@ -137,12 +138,11 @@ button {
 }
 
 .lists{
-  list-style: circle;
-  width: 50%;
-  height:400px;
+  list-style: none;
+  width: 70%;
+  height:450px;
   margin-top: 1.5rem;
   border:1px solid black;
-  margin:10px;
   padding:10px;
 
 }
@@ -185,7 +185,8 @@ li.list-item:checked::before{
     padding: .5rem;
     cursor: pointer;
     background-color: #999999;
-    color: white;
+    color:white;
+    margin-left:60%
 }
 
 .destroy-btn{
