--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -9,6 +9,23 @@ body {
     width: 100%;
     height: 70px;
     background-color: #999999;
+    display:flex;
+    align-items:center;
+
+}
+
+#header_menu{
+    display:flex;
+    float: right;
+    width:100%;
+
+}
+.title{
+    width:70%;
+    padding-left: 3%;
+    font-size: 24px;
+    color: #eeeeee;
+
 }
 
 #content {
@@ -17,13 +34,6 @@ body {
     padding-left: 3%;
 }
 
-h1 {
-    width: 94%;
-    padding-top: 17px;
-    padding-left: 3%;
-    font-size: 24px;
-    color: #eeeeee;
-}
 
 h2 {
     font-size: 36px;
@@ -108,9 +118,4 @@ button {
     text-align: center;
     border: 1px solid darkgray;
     border-radius: 40px;
-}
-
-#new_login {
-    width: 800px;
-    margin: 0 auto;
 }
