--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -57,8 +57,9 @@ p {
     color: #eeeeee;
 }
 
-.menu1{
+.menu{
     display:flex;
+    widht:100%;
 }
 
 table, tr, th, td {
@@ -93,14 +94,9 @@ button {
 }
 
 .imageB{
-     max-width: 80%;
-     max-height: 80%;
-     width: auto;
-     height: auto;
+
+
 }
 .imageC{
-     max-width: 80%;
-     max-height: 80%;
-     width: auto;
-     height: auto;
+
 }
