--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -17,11 +17,14 @@ body {
     color: #eeeeee;
 
 }
-#header-menu{
-    display:flex;
-    float: right;
-    width:100%;
 
+#header-menu-area {
+    text-align: right;
+}
+
+#header-menus{
+    display:flex;
+    width:100%;
 }
 .title{
     width:70%;
@@ -91,7 +94,8 @@ button {
 }
 
 .menu{
-    text-alibn:center;
-    display:flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
 
