--- a/WebContent/css/kaimonolists.css
+++ b/WebContent/css/kaimonolists.css
@@ -1,9 +1,8 @@
 
-.list-add-area{
-    width:100%;
-    display:flex;
-    flex-direction:row;
-    text-align:center;
+#list-add-area{
+    width:90%;
+    margin:auto;
+    margin-top:20px;
 }
 
 #list-input-area{
@@ -29,6 +28,8 @@
   margin-top: 1.5rem;
   border:1px solid black;
   padding:10px;
+  margin:0 auto;
+  margin-top:20px;
 
 }
 
@@ -85,9 +86,8 @@ li.list-item:checked::before{
 
 
 h3{
-    width:70%;
+
     text-align: center;
-    padding-left: 3%;
     font-size: 24px;
     color: #808080;
     padding-bottom:1%;
